[package]
name = "twml"
description = "Tailwind Markup Language"
version = "0.1.0"
license = "MIT"
authors = ["DISTREAT"]
repository = "https://github.com/DISTREAT/twml"
default-run = "twml-pdf"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twml"

[dependencies]
anyhow = "1.0.75"
dyn-fmt = "0.4.0"
fancy-regex = "0.12.0"
font-kit = "0.12.0"
headless_chrome = { version = "1.0.8", features = ["fetch"] }
indoc = "2.0.4"
lopdf = "0.31.0"
notify = "6.1.1"
penguin = "0.1.8"
pest = "2.7.5"
pest_derive = "2.7.5"
railwind = "0.1.5"
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread"] }
